# erased

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: erased_box.rs  erased_mut_ref.rs  erased_ref.rs  lib.rs
