[package]
name = "erased"
version = "0.1.0"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Jonathan Dönszelmann <jonabent@gmail.com>"]
description = "Erase the type of a value, safely."
keywords = ["erase", "type", "arena"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JonathanBrouwer/erased"

[dependencies]
